Fix dark mode bugs and change preloader

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
 
 /* Global styles */
 .section {
-  padding: 4rem 0;
+  padding: 2rem 0;
 }
 
 .section-center {
@@ -89,8 +89,12 @@ img {
 }
 
 .preloader-img {
-  width: 5rem;
-  height: 5rem;
+  width: 8rem;
+  height: 8rem;
+}
+
+.world-stats {
+  padding-top: 4rem;
 }
 
 .world-stats-center {
@@ -244,7 +248,6 @@ img {
   right: 5%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  transition: all 0.1s linear;
   outline: none;
   background-color: var(--clr-mode);
   border: 0.3rem solid var(--clr-mode);
@@ -267,6 +270,7 @@ img {
   border-radius: 50%;
   height: 2rem;
   width: 2rem;
+  transition: all 0.1s linear;
 }
 
 .slide {
